# precision_landing_shaping_RL

./: .bashrc  .gitignore  Dockerfile  Dockerfile_foxy  Log Analysis.ipynb  README.md  run_docker.sh
docker/: Dockerfile_ros2-dashing  Makefile
shared/: Log Analysis.ipynb  launch_agent_env.sh  launch_agent_env_micro.sh  launch_baseline.sh  launch_test_ddpg.sh  launch_test_wrapper.sh  launch_train_ddpg.sh  torch_to_onnx.ipynb
shared/ros_packages/custom_msgs/: CMakeLists.txt  package.xml
shared/ros_packages/px4_ros_com/src/examples/offboard/: offboard_control.cpp
shared/ros_packages/px4_ros_extended/: CMakeLists.txt  package.xml
shared/ros_packages/px4_ros_extended/launch/: env.launch.py  env_train.launch.py
shared/ros_packages/px4_ros_extended/src/: baseline_prec_land.cpp  land.cpp  offboard_mov_pos.cpp  offboard_mov_vel.cpp
shared/ros_packages/px4_ros_extended/src_cpp/: baseline_prec_land.cpp  env.cpp  takeoff.cpp
shared/ros_packages/px4_ros_extended/src_py/: ddpg_agent.py  env_wrapper.py  gazebo_runner.py  micrortps_runner.py  params.yaml  ppo_agent.py  rewards.py  test_ddpg_agent.py  test_env_wrapper.py
shared/ros_packages/px4_ros_extended/src_py/DDPG/: ddpg.py  memory.py  model.py  model_paper.py  models.py  utils.py
shared/ros_packages/px4_ros_extended/src_py/MonteCarlo/: monte_carlo.py
shared/ros_packages/px4_ros_extended/src_py/PPO/: memory.py  model.py  ppo.py
shared/ros_packages/px4_ros_extended/src_py/ode_models/projectile/: motion_equations.py
shared/ros_packages/px4_ros_extended/src_py/ode_models/quadcopter/: main.py  motion_equations.py  trust_validation.py
shared/ros_packages/scripts/: px4_ros2.sh
